--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     
     "express":"3.0.5",
     "http": "0.0.0",
-    "jade": "^1.11.0",
+    "jade": "0.30.0",
+	
     "mssql": "^3.3.0",
     "nodejs": "^0.0.0",
     "nodemailer": "^4.0.1",
