--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
     "datatables-query": "^0.2.0",
     "express": "^3.0.5",
     "http": "0.0.0",
+    "http-server": "^0.10.0",
     "jade": "0.30.0",
+    "markdown": "^0.5.0",
     "mssql": "^3.3.0",
+    "mysql": "^2.14.1",
     "nodejs": "^0.0.0",
     "nodemailer": "^4.0.1",
     "serialport": "^4.0.7",
@@ -20,7 +23,7 @@
   "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "nodemon server.js"
   },
   "repository": {
     "type": "git",
