--- a/package.json
+++ b/package.json
@@ -15,15 +15,15 @@
     "markdown": "^0.5.0",
     "mssql": "^3.3.0",
     "mysql": "^2.14.1",
-    "nodejs": "^0.0.0",
     "nodemailer": "^4.0.1",
+    "nodemon": "^1.12.1",
     "serialport": "^4.0.7",
     "socket.io": "^1.7.1"
   },
   "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "nodemon server.js"
   },
   "repository": {
     "type": "git",
