listing all dependencies

--- a/package.json
+++ b/package.json
@@ -4,25 +4,178 @@
   "description": "pms",
   "main": "Express.js",
   "dependencies": {
-    "body-parser": "^1.17.1",
-    "bootstrap": "^3.3.7",
-    "cmd-exec": "^0.1.0",
-    "datatables-query": "^0.2.0",
-    "express": "^3.0.5",
+    "abbrev": "1.1.0",
+    "accepts": "1.2.13",
+    "after": "0.8.2",
+    "amdefine": "1.0.1",
+    "arraybuffer.slice": "0.0.6",
+    "asap": "2.0.6",
+    "async": "1.5.2",
+    "babel-runtime": "5.8.38",
+    "backo2": "1.0.2",
+    "balanced-match": "1.0.0",
+    "base64-arraybuffer": "0.1.5",
+    "base64-url": "1.2.1",
+    "base64id": "1.0.0",
+    "basic-auth": "1.0.4",
+    "basic-auth-connect": "1.0.0",
+    "batch": "0.5.3",
+    "better-assert": "1.0.2",
+    "big-number": "0.3.1",
+    "bignumber.js": "4.0.2",
+    "bindings": "1.2.1",
+    "bl": "1.2.1",
+    "blob": "0.0.4",
+    "body-parser": "1.17.2",
+    "bootstrap": "3.3.7",
+    "brace-expansion": "1.1.8",
+    "bytes": "2.1.0",
+    "callsite": "1.0.0",
+    "character-parser": "1.0.2",
+    "cmd-exec": "0.1.0",
+    "colors": "1.1.2",
+    "commander": "2.6.0",
+    "component-bind": "1.0.0",
+    "component-emitter": "1.1.2",
+    "component-inherit": "0.0.3",
+    "compressible": "2.0.11",
+    "compression": "1.5.2",
+    "concat-map": "0.0.1",
+    "connect": "2.30.2",
+    "connect-timeout": "1.6.2",
+    "content-disposition": "0.5.0",
+    "content-type": "1.0.2",
+    "cookie": "0.1.3",
+    "cookie-parser": "1.3.5",
+    "cookie-signature": "1.0.6",
+    "core-js": "1.2.7",
+    "core-util-is": "1.0.2",
+    "crc": "3.3.0",
+    "csrf": "3.0.6",
+    "css": "1.0.8",
+    "css-parse": "1.0.4",
+    "css-stringify": "1.0.5",
+    "csurf": "1.8.3",
+    "datatables-query": "0.2.0",
+    "debug": "2.2.0",
+    "define-properties": "1.1.2",
+    "depd": "1.0.1",
+    "destroy": "1.0.4",
+    "ee-first": "1.1.1",
+    "engine.io": "1.8.4",
+    "engine.io-client": "1.8.4",
+    "engine.io-parser": "1.3.2",
+    "errorhandler": "1.4.3",
+    "escape-html": "1.0.2",
+    "etag": "1.7.0",
+    "express": "3.21.2",
+    "express-session": "1.11.3",
+    "finalhandler": "0.4.0",
+    "foreach": "2.0.5",
+    "forwarded": "0.1.0",
+    "fresh": "0.3.0",
+    "function-bind": "1.1.0",
+    "generic-pool": "2.5.4",
+    "git-auto-commit": "1.0.1",
+    "has-binary": "0.1.7",
+    "has-cors": "1.1.0",
     "http": "0.0.0",
-    "http-server": "^0.10.0",
+    "http-errors": "1.3.1",
+    "iconv-lite": "0.4.11",
+    "immediate": "3.0.6",
+    "indexof": "0.0.1",
+    "inherits": "2.0.3",
+    "ipaddr.js": "1.0.5",
+    "is-promise": "1.0.1",
+    "isarray": "0.0.1",
     "jade": "0.30.0",
-    "markdown": "^0.5.0",
-    "mssql": "^3.3.0",
-    "mysql": "^2.14.1",
-    "nodemailer": "^4.0.1",
-    "nodemon": "^1.12.1",
-    "npm-run-all": "^4.1.1",
-    "run-p": "0.0.0",
-    "run-s": "0.0.0",
-    "serialport": "^4.0.7",
-    "socket.io": "^1.7.1",
-    "sync-files": "^1.0.3"
+    "json3": "3.3.2",
+    "keypress": "0.1.0",
+    "lie": "3.1.1",
+    "lodash": "4.17.4",
+    "markdown": "0.5.0",
+    "media-typer": "0.3.0",
+    "merge-descriptors": "1.0.0",
+    "method-override": "2.3.9",
+    "methods": "1.1.2",
+    "mime": "1.3.4",
+    "mime-db": "1.29.0",
+    "mime-types": "2.1.16",
+    "minimatch": "3.0.4",
+    "minimist": "0.0.8",
+    "mkdirp": "0.5.1",
+    "monocle": "0.1.50",
+    "morgan": "1.6.1",
+    "ms": "0.7.1",
+    "mssql": "3.3.0",
+    "multiparty": "3.3.2",
+    "mysql": "2.14.1",
+    "nan": "2.6.2",
+    "negotiator": "0.5.3",
+    "nodemailer": "4.0.1",
+    "nopt": "2.1.2",
+    "object-assign": "4.1.0",
+    "object-component": "0.0.3",
+    "object-keys": "1.0.11",
+    "object.assign": "4.0.4",
+    "on-finished": "2.3.0",
+    "on-headers": "1.0.1",
+    "optimist": "0.3.7",
+    "options": "0.0.6",
+    "parsejson": "0.0.3",
+    "parseqs": "0.0.5",
+    "parseuri": "0.0.5",
+    "parseurl": "1.3.1",
+    "pause": "0.1.0",
+    "process-nextick-args": "1.0.7",
+    "promise": "2.0.0",
+    "proxy-addr": "1.0.10",
+    "q": "1.5.0",
+    "qs": "4.0.0",
+    "random-bytes": "1.0.0",
+    "range-parser": "1.0.3",
+    "raw-body": "2.1.7",
+    "readable-stream": "1.1.14",
+    "readdirp": "0.2.5",
+    "response-time": "2.3.2",
+    "rndm": "1.2.0",
+    "safe-buffer": "5.1.1",
+    "semver": "5.4.1",
+    "send": "0.13.0",
+    "serialport": "4.0.7",
+    "serve-favicon": "2.3.2",
+    "serve-index": "1.7.3",
+    "serve-static": "1.10.3",
+    "setprototypeof": "1.0.3",
+    "socket.io": "1.7.4",
+    "socket.io-adapter": "0.5.0",
+    "socket.io-client": "1.7.4",
+    "socket.io-parser": "2.3.1",
+    "source-map": "0.1.43",
+    "sprintf": "0.1.5",
+    "sqlstring": "2.2.0",
+    "statuses": "1.3.1",
+    "stream-counter": "0.2.0",
+    "string_decoder": "0.10.31",
+    "tedious": "1.14.0",
+    "to-array": "0.1.4",
+    "transformers": "2.0.1",
+    "tsscmp": "1.0.5",
+    "type-is": "1.6.15",
+    "uglify-js": "2.2.5",
+    "uid-safe": "2.1.4",
+    "ultron": "1.0.2",
+    "unpipe": "1.0.0",
+    "util-deprecate": "1.0.2",
+    "utils-merge": "1.0.0",
+    "vary": "1.0.1",
+    "vhost": "3.0.2",
+    "wordwrap": "0.0.3",
+    "ws": "1.1.4",
+    "wtf-8": "1.0.0",
+    "xmlhttprequest-ssl": "1.5.3",
+    "yeast": "0.1.2"
+    
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
