--- a/package.json
+++ b/package.json
@@ -127,6 +127,7 @@
     "parseuri": "0.0.5",
     "parseurl": "1.3.1",
     "pause": "0.1.0",
+    "pm2-server-monit": "^2.5.2",
     "process-nextick-args": "1.0.7",
     "promise": "2.0.0",
     "proxy-addr": "1.0.10",
@@ -175,11 +176,11 @@
     "wtf-8": "1.0.0",
     "xmlhttprequest-ssl": "1.5.3",
     "yeast": "0.1.2"
-    
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon server",
+    "nodered": "nodemon C:/Users/kvan/AppData/Roaming/npm/node_modules/node-red/red.js",
     "prd": "cd /d G:/Document Control/Current Method sheet/ && http-server -p 5001 -d -i --cors",
     "httpdoc": "http-server -p 5001 -d -i --cors",
     "syncfromdev": "sync-files D:/Node3400 Y:/Node3400Sync",
